[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/GUI/label_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/GUI/Settings control.gd" type="Script" id=3]
[ext_resource path="res://prefabs/GUI/Background.tscn" type="PackedScene" id=4]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Display mode" type="HBoxContainer" parent="."]
anchor_left = 0.029
anchor_top = 0.11
anchor_right = 0.386
anchor_bottom = 0.163
margin_left = 0.303999
margin_top = -7.62939e-06
margin_right = -0.264008
margin_bottom = 0.199997
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="MarginContainer" parent="Display mode"]
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 32 )

[node name="NinePatchRect" type="NinePatchRect" parent="Display mode/Name"]
margin_right = 150.0
margin_bottom = 32.0
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="Display mode/Name/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Display mode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="MarginContainer" parent="Display mode"]
margin_left = 154.0
margin_right = 365.0
margin_bottom = 32.0

[node name="OptionButton" type="OptionButton" parent="Display mode/Options"]
margin_right = 211.0
margin_bottom = 32.0
focus_mode = 0
text = "Window with borders"

[node name="Debug" type="HBoxContainer" parent="."]
anchor_left = 0.029
anchor_top = 0.05
anchor_right = 0.205
anchor_bottom = 0.103
margin_left = 0.303999
margin_right = 0.0799866
margin_bottom = 0.199997
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="MarginContainer" parent="Debug"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="Debug/Name"]
margin_right = 100.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Debug/Name/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Debug"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check" type="MarginContainer" parent="Debug"]
margin_left = 104.0
margin_right = 168.0
margin_bottom = 32.0

[node name="Debug" type="CheckButton" parent="Debug/Check"]
margin_right = 64.0
margin_bottom = 32.0
focus_mode = 0
pressed = true

[node name="Back" type="Button" parent="."]
anchor_left = 0.0347483
anchor_top = 0.892512
anchor_right = 0.181748
anchor_bottom = 0.945512
margin_left = 0.303999
margin_top = -0.200001
margin_right = -0.224014
margin_bottom = -7.62939e-06
rect_min_size = Vector2( 150, 32 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]
[connection signal="item_selected" from="Display mode/Options/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Debug/Check/Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
